

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:defaultValue="@string/wifi_band_default"
        android:entries="@array/wifi_band_array"
        android:entryValues="@array/wifi_band_index_array"
        android:key="@string/wifi_band_key"
        android:persistent="true"
        android:summary="@string/wifi_band_summary"
        android:title="@string/wifi_band_title" />

    <eu.operando.proxy.settings.ScanIntervalPreference
        android:defaultValue="@integer/scan_interval_default"
        android:key="@string/scan_interval_key"
        android:persistent="true"
        android:summary="@string/scan_interval_summary"
        android:title="@string/scan_interval_title" />

    <ListPreference
        android:defaultValue="@string/sort_by_default"
        android:entries="@array/sort_by_array"
        android:entryValues="@array/sort_by_index_array"
        android:key="@string/sort_by_key"
        android:persistent="true"
        android:summary="@string/sort_by_summary"
        android:title="@string/sort_by_title" />
</PreferenceScreen>