<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:background="@color/white"
                android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            style="@style/LoginPageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/email"
            />

        <EditText
            android:id="@+id/emailET"
            style="@style/LoginEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/edittext_border"
            android:inputType="textEmailAddress"

            />

        <TextView
            style="@style/LoginPageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/password"
            />

        <EditText
            android:id="@+id/passwordET"
            style="@style/LoginEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/edittext_border"
            android:inputType="textPassword"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/loginMargin"
            android:layout_marginRight="@dimen/loginMargin"
            android:layout_marginTop="@dimen/loginMargin"
            android:background="@color/white">

            <TextView
                style="@style/LoginPageTextView"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="0dp"
                android:text="@string/rememberMe"/>

            <Switch
                android:id="@+id/permanentLoginSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/loginMargin"
            android:layout_marginRight="@dimen/loginMargin"
            android:id="@+id/signInBut"
            android:background="@color/darkGray"
            android:text="@string/signIn"/>

        <TextView
            android:id="@+id/forgotPasswordTV"
            style="@style/LoginPageTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            android:gravity="center"
            android:text="@string/forgotPassword"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/blackTitle"/>

        <RelativeLayout
            android:id="@+id/createAnAccountRL"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/darkGray">

            <TextView
                style="@style/LoginPageTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal"
                android:text="@string/createAccount"/>

        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>